<resources>
    <string name="app_name">SpotifyPH</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="menu_screen_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="add_friends">Add Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_list">Friend List</string>
    <string name="name">Name</string>
    <string name="spotify_username">Spotify Username</string>
    <string name="category">Category</string>
    <string name="include_for_playlist_creation">Include for playlist creation</string>
    <string name="testfragment">TestFragment</string>
    <string name="new_playlist_name">New Playlist Name</string>
    <string name="select_group_to_include">Select group to include:</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="custom">Custom</string>
    <string name="select_mix_method">Select mix method:</string>
    <string name="intersect_all">Intersect all</string>
    <string name="intersect_custom">Intersect custom</string>
    <string name="create">Create</string>
    <string name="select_friends">Select friends</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string-array name="category_items">
        <item>Family</item>
        <item>Friend</item>
    </string-array>

</resources>