<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <EditText
        android:id="@+id/editTextPlaylistName"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/new_playlist_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_selected">



        <RadioButton
            android:id="@+id/radio_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"

            android:text="@string/family"
            android:textColor="#FFFFFF" />
        <RadioButton
            android:id="@+id/radio_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"

            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/radio_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"

            android:textColor="#FFFFFF" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_view_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/select_group_to_include"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlaylistName" />

    />

    <TextView
        android:id="@+id/text_view_method"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/select_mix_method"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroupMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_method">


        <RadioButton
            android:id="@+id/radio_intersect_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"

            android:text="@string/intersect_all"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/radio_intersect_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intersect_custom"

            android:textColor="#FFFFFF" />

    </RadioGroup>

    <Button
        android:id="@+id/button_createList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/create"

        android:backgroundTint="@color/spotify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMethod" />

</androidx.constraintlayout.widget.ConstraintLayout>