<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="hu.bme.playlisthelper.LoginFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_Login_to_MenuScreen"
            app:destination="@id/MenuScreen" />
    </fragment>
    <fragment
        android:id="@+id/MenuScreen"
        android:name="hu.bme.playlisthelper.MenuScreenFragment"
        android:label="@string/menu_screen_fragment_label"
        tools:layout="@layout/fragment_menu_screen">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_MenuScreen_to_FriendList"
            app:destination="@+id/FriendList"
            />
    </fragment>

    <fragment
        android:id="@+id/FriendList"
        android:name="hu.bme.playlisthelper.FriendList"
        android:label="@string/friend_list"
        tools:layout="@layout/fragment_friend_list"/>



</navigation>