<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MenuScreenFragment">

    <Button
        style="@style/AppTheme.MyMaterialButton"
        android:backgroundTint="#08ED59"

        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button

        android:id="@+id/button_create_new_playlist"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/spotify"
        android:text="@string/create_new_playlist"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/button_add_friends"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/spotify"
        android:text="@string/add_friends"
        android:textAllCaps="false"


        android:textColor="@color/white"

        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_new_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>